Adding keyframes to Quaternions in NLA's full stack tweak mode #100574

Closed
opened 2022-08-22 23:35:22 +02:00 by Tal Hershkovich · 16 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.15

Blender Version
Broken: version: 3.2.2, branch: master, commit date: 2022-08-02 18:15, hash: bcfdb14560

Short description of error
When animating the bottom track in the NLA's new Fullstack tweak mode, and the top layer has a combine blend type, then it's not possible to add keyframes in the bottom track to the Quaternion rotation.
in the attached file the cube is also going crazy when I try to rotate it.

the console throws this Warning

Warning: Could not insert 1 keyframe(s) due to zero NLA influence, base value, or value remapping failed: OBCube.Quaternion Rotation for indices [0, ]

This issue was also mentioned in this page about NLA: Keyframe Remap Through Upper Strips
https://developer.blender.org/D10504
but I thought it's better to make a proper bug report for this issue.

Exact steps for others to reproduce the error
open the file nla_fullstack_combine_bug.blend
you should have a cube with two tracks/strips. bottom track should be already in full stack tweak mode.
Try to rotate and to add keyframe to the cube, also with and without auto keyframe.

Work arounds:

  • This problem occurs in the 3d viewport, but when adding keyframe to the attributes in the N-panel or properties it works ok.
  • Another work around is to use 'COMBINE' blend type instead of 'Replace' blend type in the bottom track as well
**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.15 **Blender Version** Broken: version: 3.2.2, branch: master, commit date: 2022-08-02 18:15, hash: `bcfdb14560` **Short description of error** When animating the bottom track in the NLA's new Fullstack tweak mode, and the top layer has a combine blend type, then it's not possible to add keyframes in the bottom track to the Quaternion rotation. in the attached file the cube is also going crazy when I try to rotate it. the console throws this Warning > Warning: Could not insert 1 keyframe(s) due to zero NLA influence, base value, or value remapping failed: OBCube.Quaternion Rotation for indices [0, ] This issue was also mentioned in this page about **NLA: Keyframe Remap Through Upper Strips** https://developer.blender.org/D10504 but I thought it's better to make a proper bug report for this issue. **Exact steps for others to reproduce the error** open the file [nla_fullstack_combine_bug.blend](https://archive.blender.org/developer/F13411873/nla_fullstack_combine_bug.blend) you should have a cube with two tracks/strips. bottom track should be already in full stack tweak mode. Try to rotate and to add keyframe to the cube, also with and without auto keyframe. **Work arounds:** - This problem occurs in the 3d viewport, but when adding keyframe to the attributes in the N-panel or properties it works ok. - Another work around is to use 'COMBINE' blend type instead of 'Replace' blend type in the bottom track as well

Added subscriber: @TalHershkovich

Added subscriber: @TalHershkovich

Added subscribers: @dr.sybren, @BClark, @wbmoss_dev

Added subscribers: @dr.sybren, @BClark, @wbmoss_dev
Tal Hershkovich changed title from Adding keyframes to Quaternion in NLA's full stack mode to Adding keyframes to Quaternions in NLA's full stack tweak mode 2022-08-22 23:41:39 +02:00
Member

Added subscriber: @OmarEmaraDev

Added subscriber: @OmarEmaraDev
Member

Are you just creating a report for it to be tracked as a known limitation as mentioned in the linked patch?
Or is it an actual bug in the operator added by the linked commit?

Are you just creating a report for it to be tracked as a known limitation as mentioned in the linked patch? Or is it an actual bug in the operator added by the linked commit?
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

Added subscribers: @Likkez-2, @bunny

Added subscribers: @Likkez-2, @bunny

Experiencing same issue observed by @TalHershkovich and @Likkez-2: Auto-keyframe mode and using the 'I' shortcut in the viewport do not insert keyframes, but hovering over the rotation values in the Transform panel and pressing 'I' works. Appears to be different than the limitations mentioned in the linked commit, which are cases in which keyframing will fail entirely, while in this case the keyframes do actually insert successfully when using the shortcut over the values in the Transform panel.

Experiencing same issue observed by @TalHershkovich and @Likkez-2: Auto-keyframe mode and using the 'I' shortcut in the viewport do not insert keyframes, but hovering over the rotation values in the Transform panel and pressing 'I' works. Appears to be different than the limitations mentioned in the linked commit, which are cases in which keyframing will fail entirely, while in this case the keyframes do actually insert successfully when using the shortcut over the values in the Transform panel.
Member

Oh good find ..what do you think @wbmoss_dev

Oh good find ..what do you think @wbmoss_dev

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

As Omar already asked, is this a bug report or a known limitation thats noted elsewhere?

As Omar already asked, is this a bug report or a known limitation thats noted elsewhere?
Member

Pulling this back up for the Animation Module to look at soon.

Pulling this back up for the Animation Module to look at soon.
Philipp Oeser removed the
Interest
Animation & Rigging
label 2023-02-09 14:34:46 +01:00
Member

@BClark : do you consider this Confirmed?

@BClark : do you consider this Confirmed?
Philipp Oeser added
Status
Needs Info from Developers
and removed
Status
Needs Information from User
labels 2023-02-20 11:54:03 +01:00

I can reproduce the issue somewhat.

in the attached file the cube is also going crazy when I try to rotate it.

This I cannot reproduce.

it's not possible to add keyframes in the bottom track to the Quaternion rotation.

This I do see with the attached file. As soon as I press TAB twice (i.e. exit and then enter tweak mode) it works just fine, though. Maybe this was fixed in the mean time?

@TalHershkovich can you test this again to confirm, please?

I can reproduce the issue *somewhat*. > in the attached file the cube is also going crazy when I try to rotate it. This I cannot reproduce. > it's not possible to add keyframes in the bottom track to the Quaternion rotation. This I do see with the attached file. As soon as I press TAB twice (i.e. exit and then enter tweak mode) it works just fine, though. Maybe this was fixed in the mean time? @TalHershkovich can you test this again to confirm, please?
Sybren A. Stüvel added
Status
Needs Information from User
and removed
Status
Needs Info from Developers
labels 2023-02-20 12:57:21 +01:00

Hi Guys,
Sorry for my late reply. Yes, the bug is still there, I've just tested it on 3.5

@dr.sybren Did you go into full stack evaluation tweak mode. This is an issue that is directly related to. it works ok with the old (lower stack) tweak mode.
The layers order should be also "replace" blend type in the base layer and "combine" on the second.

As Omar already asked, is this a bug report or a known limitation thats noted elsewhere?

Yes, it's a bug. It works ok when hovering the properties tab and adding keyframes from there. The issue happens only when adding this keyframes from the viewport or dopesheet.

Hi Guys, Sorry for my late reply. Yes, the bug is still there, I've just tested it on 3.5 @dr.sybren Did you go into **full stack evaluation** tweak mode. This is an issue that is directly related to. it works ok with the old (lower stack) tweak mode. The layers order should be also "replace" blend type in the base layer and "combine" on the second. > As Omar already asked, is this a bug report or a known limitation thats noted elsewhere? Yes, it's a bug. It works ok when hovering the properties tab and adding keyframes from there. The issue happens only when adding this keyframes from the viewport or dopesheet.

@dr.sybren Did you go into full stack evaluation tweak mode. This is an issue that is directly related to. it works ok with the old (lower stack) tweak mode.

I'm a noob. That was the difference.

But even when I'm properly in full-stack tweak mode, I can't reproduce the cube going crazy with rotation (I tried with both the 'R' hotkey and the rotation gyzmo) and I don't get the "Warning: Could not insert 1 keyframe(s) ..." message either when I try to key the rotation.

Blender doesn't actually insert a keyframe either, and it does when you hover over the rotation props and press I, so this is indeed a bug.

> @dr.sybren Did you go into **full stack evaluation** tweak mode. This is an issue that is directly related to. it works ok with the old (lower stack) tweak mode. I'm a noob. That was the difference. But even when I'm properly in full-stack tweak mode, I can't reproduce the cube going crazy with rotation (I tried with both the 'R' hotkey and the rotation gyzmo) and I don't get the "Warning: Could not insert 1 keyframe(s) ..." message either when I try to key the rotation. Blender doesn't actually insert a keyframe either, and it does when you hover over the rotation props and press `I`, so this is indeed a bug.
Sybren A. Stüvel added
Status
Confirmed
and removed
Status
Needs Information from User
labels 2023-02-27 11:30:08 +01:00

I'm a noob. That was the difference.

That's exactly why tab should be the default hotkey for for fullstack evaluation. Most people don't even know it exists, and it's pretty important update for the nla. after this issue is fixed I really don't see any reason to keep the old tweak mode, but I guess that's for another discussion...

But even when I'm properly in full-stack tweak mode, I can't reproduce the cube going crazy with rotation

I also can't reproduce it anymore, maybe it's something that been fixed. This bug report is more then half year old, so I can't really remember why I've added this here, I guess maybe because both issues were related to quaternions.
However the current issue with quaternions should be pretty important fix for the nla

> I'm a noob. That was the difference. That's exactly why tab should be the default hotkey for for fullstack evaluation. Most people don't even know it exists, and it's pretty important update for the nla. after this issue is fixed I really don't see any reason to keep the old tweak mode, but I guess that's for another discussion... > But even when I'm properly in full-stack tweak mode, I can't reproduce the cube going crazy with rotation I also can't reproduce it anymore, maybe it's something that been fixed. This bug report is more then half year old, so I can't really remember why I've added this here, I guess maybe because both issues were related to quaternions. However the current issue with quaternions should be pretty important fix for the nla
Sybren A. Stüvel added this to the Module: Animation & Rigging project 2023-03-09 16:44:10 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-03-20 15:08:04 +01:00
Sybren A. Stüvel removed this from the Module: Animation & Rigging project 2023-03-21 16:19:04 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Asset System
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#100574
No description provided.