Fix #100574: Failure to key Quaternions in NLA's full stack tweak mode

The NLA's behaviour of always forcing a full set of keys (XYZW) is now
done in both 'Combine' and 'Replace' mode (previously only the former).

This fixes the bug where quaternions could not be properly keyed in 'full
stack tweak mode' under certain conditions.

Pull Request: https://projects.blender.org/blender/blender/pulls/105604